xmlespresso/com.nubean.superior/src/com/nubean/css/parser/CSSParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CSSParser.java */
/*
The MIT License (MIT)

Copyright (c) 2015 NuBean LLC

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/

package com.nubean.css.parser;

import javax.swing.text.Document;
import org.xml.sax.SAXParseException;

import com.nubean.michbase.DefaultErrorHandler;

public class CSSParser/*@bgen(jjtree)*/implements CSSParserTreeConstants, CSSParserConstants {/*@bgen(jjtree)*/
  protected JJTCSSParserState jjtree = new JJTCSSParserState();private Document document;
        private DefaultErrorHandler errorHandler;
        private ParseException lastException;
        private TokenMgrError tokenError;

        public void setErrorHandler(DefaultErrorHandler errorHandler) {
                this.errorHandler = errorHandler;
        }

        private void recoverFromError(ParseException e) {
         lastException = e;
         try {
                if(errorHandler != null) {

                        SAXParseException spe = null;
                                if(e.currentToken.next != null) {
                                        spe = new SAXParseException(e.getMessage(), null, null,
                                                e.currentToken.next.beginLine, e.currentToken.next.beginColumn);
                                } else {
                                        spe = new SAXParseException(e.getMessage(), null, null,
                                                e.currentToken.beginLine, e.currentToken.beginColumn);
                                }
                        errorHandler.error(spe);

        }

          } catch(Exception sae) {

      }

     }

     private void recoverFromError(TokenMgrError e) {
      tokenError = e;
          try {
                if(errorHandler != null) {
                        SAXParseException spe =
                         new SAXParseException(e.getMessage(), null, null,0,0);
                errorHandler.error(spe);
        }
          } catch(Exception sae) {

      }
     }

        private void jjtreeOpenNodeScope(SimpleNode sn) {
      sn.setFirstToken(getToken(1));
    }

    private  void jjtreeCloseNodeScope(SimpleNode sn){
      sn.setLastToken(getToken(0));
    }

    public Document getDocument() {
        return  document;
    }

    public void setDocument(Document document) {
        this.document = document;
    }

    public ParseException getParseException() {
        return lastException;
    }

    public TokenMgrError getTokenMgrError() {
        return tokenError;
    }

     private void switchTo(int state) {
        token_source.SwitchTo(state);
        if(token.next != null) {
                if(token.next.image != null)
                        jj_input_stream.backup(token.next.image.length());
                token.next = null;
        }
    }

    public void setTabSize(int size) {
     jj_input_stream.setTabSize(size);
    }

  final public ASTcss stylesheet() throws ParseException {
 /*@bgen(jjtree) css */
  ASTcss jjtn000 = new ASTcss(this, JJTCSS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
                lastException = null;
                tokenError = null;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHARSET_SYM:
          jj_consume_token(CHARSET_SYM);
          jj_consume_token(STRING);
          jj_consume_token(SEMI_COLON);
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
          case CDO:
          case CDC:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            jj_consume_token(SPACE);
            break;
          case CDO:
            jj_consume_token(CDO);
            break;
          case CDC:
            jj_consume_token(CDC);
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IMPORT_SYM:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          imports();
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SPACE:
            case CDO:
            case CDC:
              ;
              break;
            default:
              jj_la1[4] = jj_gen;
              break label_3;
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SPACE:
              jj_consume_token(SPACE);
              break;
            case CDO:
              jj_consume_token(CDO);
              break;
            case CDC:
              jj_consume_token(CDC);
              break;
            default:
              jj_la1[5] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENT:
          case HASH:
          case COLON:
          case PERIOD:
          case ASTERISK:
          case LSQBRKT:
          case PAGE_SYM:
          case MEDIA_SYM:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_4;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENT:
          case HASH:
          case COLON:
          case PERIOD:
          case ASTERISK:
          case LSQBRKT:
            ruleset();
            break;
          case MEDIA_SYM:
            media();
            break;
          case PAGE_SYM:
            page();
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SPACE:
            case CDO:
            case CDC:
              ;
              break;
            default:
              jj_la1[8] = jj_gen;
              break label_5;
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SPACE:
              jj_consume_token(SPACE);
              break;
            case CDO:
              jj_consume_token(CDO);
              break;
            case CDC:
              jj_consume_token(CDC);
              break;
            default:
              jj_la1[9] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
        jj_consume_token(0);
      } catch (ParseException e) {
                recoverFromError(e);
      } catch (TokenMgrError te) {
                recoverFromError(te);
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtreeCloseNodeScope(jjtn000);
         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void imports() throws ParseException {
 /*@bgen(jjtree) imports */
  ASTimports jjtn000 = new ASTimports(this, JJTIMPORTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT_SYM);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        jj_consume_token(SPACE);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        jj_consume_token(STRING);
        break;
      case URI:
        jj_consume_token(URI);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_7;
        }
        jj_consume_token(SPACE);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        medium();
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMA:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_8;
          }
          jj_consume_token(COMA);
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SPACE:
              ;
              break;
            default:
              jj_la1[14] = jj_gen;
              break label_9;
            }
            jj_consume_token(SPACE);
          }
          medium();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(SEMI_COLON);
      label_10:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_10;
        }
        jj_consume_token(SPACE);
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtreeCloseNodeScope(jjtn000);
      }
    }
  }

  final public void media() throws ParseException {
 /*@bgen(jjtree) media */
  ASTmedia jjtn000 = new ASTmedia(this, JJTMEDIA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(MEDIA_SYM);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_11;
        }
        jj_consume_token(SPACE);
      }
      medium();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMA:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_12;
        }
        jj_consume_token(COMA);
        label_13:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_13;
          }
          jj_consume_token(SPACE);
        }
        medium();
      }
      jj_consume_token(LBRACE);
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_14;
        }
        jj_consume_token(SPACE);
      }
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
        case HASH:
        case COLON:
        case PERIOD:
        case ASTERISK:
        case LSQBRKT:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_15;
        }
        ruleset();
      }
      jj_consume_token(RBRACE);
      label_16:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_16;
        }
        jj_consume_token(SPACE);
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void medium() throws ParseException {
    jj_consume_token(IDENT);
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_17;
      }
      jj_consume_token(SPACE);
    }
  }

  final public void page() throws ParseException {
 /*@bgen(jjtree) page */
  ASTpage jjtn000 = new ASTpage(this, JJTPAGE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(PAGE_SYM);
      label_18:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_18;
        }
        jj_consume_token(SPACE);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        pseudo_page();
        break;
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      label_19:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_19;
        }
        jj_consume_token(SPACE);
      }
      jj_consume_token(LBRACE);
      label_20:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_20;
        }
        jj_consume_token(SPACE);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        declaration();
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      label_21:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMI_COLON:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_21;
        }
        jj_consume_token(SEMI_COLON);
        label_22:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            ;
            break;
          default:
            jj_la1[27] = jj_gen;
            break label_22;
          }
          jj_consume_token(SPACE);
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          declaration();
          break;
        default:
          jj_la1[28] = jj_gen;
          ;
        }
      }
      jj_consume_token(RBRACE);
      label_23:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_23;
        }
        jj_consume_token(SPACE);
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
       jjtreeCloseNodeScope(jjtn000);
     }
    }
  }

  final public void pseudo_page() throws ParseException {
    jj_consume_token(COLON);
    jj_consume_token(IDENT);
  }

  final public void operator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 75:
      jj_consume_token(75);
      label_24:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[29] = jj_gen;
          break label_24;
        }
        jj_consume_token(SPACE);
      }
      break;
    case COMA:
      jj_consume_token(COMA);
      label_25:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[30] = jj_gen;
          break label_25;
        }
        jj_consume_token(SPACE);
      }
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void combinator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      label_26:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[32] = jj_gen;
          break label_26;
        }
        jj_consume_token(SPACE);
      }
      break;
    case GREATER:
      jj_consume_token(GREATER);
      label_27:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[33] = jj_gen;
          break label_27;
        }
        jj_consume_token(SPACE);
      }
      break;
    case SPACE:
      jj_consume_token(SPACE);
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void unary_operator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 76:
      jj_consume_token(76);
      break;
    case PLUS:
      jj_consume_token(PLUS);
      break;
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void property() throws ParseException {
    jj_consume_token(IDENT);
    label_28:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[36] = jj_gen;
        break label_28;
      }
      jj_consume_token(SPACE);
    }
  }
